# Agent

./: .env  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  enterprise_agent_project_structure.md  enterprise_agent_project_structure_v1.md  launch_json.md  pyproject.toml  requirements.txt  v1.md
.claude/: settings.local.json
agent/: __init__.py
agent/checkpoint/: __init__.py  base.py  redis_store.py
agent/core/: __init__.py  agent_loop.py  base.py  context.py  errors.py  executor.py  nodes.py  planner.py  react_engine.py  reflector.py  registry.py  state.py  supervisor.py
agent/core/checkpoint/: __init__.py  base.py  (+1 more)
agent/infra/: __init__.py  config.py  logger.py  metrics.py  tracing.py
agent/input/: __init__.py  guardrails.py  intent_router.py  preprocessor.py
agent/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  registry.py  router.py  token_counter.py
agent/memory/: __init__.py  base.py  conversation.py  episodic.py  knowledge_graph.py  long_term.py  manager.py  retriever.py  summary.py  working.py
agent/output/: __init__.py  formatter.py  output_guard.py  streaming.py
agent/planning/: __init__.py  nodes.py  planner.py  registry.py  supervisor.py
agent/prompts/: __init__.py  loader.py  planner.py  react.py  reflection.py  system.py
agent/tools/: __init__.py  base.py  executor.py  registry.py
agent/workflows/: __init__.py  query_workflow.py  report_workflow.py
app/: __init__.py  api.py  config.py  dependencies.py  main.py  platform.py  schemas.py
app/agents/: __init__.py  base.py  context.py  errors.py  graph.py  registry.py  state.py
app/api/: deps.py  websocket.py
app/api_routes/: deps.py  websocket.py
app/core/: __init__.py  exceptions.py  middleware.py  resilience.py  response.py  security.py
app/crud/: __init__.py  base.py  document.py  project.py  report.py  user.py
app/db/: __init__.py  milvus.py  minio.py  mysql.py  redis.py
app/memory/: __init__.py  base.py  cache.py  conversation.py  episodic.py  long_term.py  manager.py  short_term.py  structured.py  summary.py  unified.py  vector.py
app/model_service/: __init__.py  embedding.py  llm.py  registry.py  router.py  vlm.py
app/models/: __init__.py  base.py  document.py  progress.py  project.py  report.py  user.py
app/observability/: __init__.py  cost_tracker.py  logger.py  metrics.py  tracer.py
app/orchestration/: __init__.py  base.py  query_workflow.py  report_workflow.py  router.py
app/perception/: __init__.py  embedder.py  image_processor.py  ocr.py  pdf_processor.py  text_processor.py
app/pipeline/: __init__.py  base.py  chunker.py  embedder.py  image_processor.py  pdf_processor.py  text_processor.py
app/schema_defs/: __init__.py  progress.py  project.py  upload.py
app/schemas/: chat.py  report.py  user.py
app/services/: __init__.py  chat_service.py  document_service.py  export_service.py  progress_service.py  project_service.py  query_service.py  report_service.py
app/tasks/: __init__.py  celery_app.py  document_tasks.py  report_tasks.py  scheduled.py
app/tools/: __init__.py  base.py  db_query.py  export.py  registry.py  vector_search.py
deploy/helm/: Chart.yaml  values.yaml
deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
docs/: deployment.md
evals/: eval_runner.py  metrics.py
evals/datasets/: golden_cases.jsonl
migrations/: env.py
scripts/: benchmark_embedding.py  init_db.py  init_milvus.py  migrate_db.py  mysql_init.sql  seed_data.py  seed_knowledge.py  sql_seed_data.py  test_agent.py  test_connections.py  test_models.py
tests/: conftest.py  test_e2e.py  test_memory.py  test_nodes.py  test_react_engine.py  test_tools.py
tests/test_agents/: test_graph.py
tests/test_api/: test_full.py  test_p1.py
tests/test_perception/: test_chunker.py
tests/test_pipeline/: test_chunker.py
tests/test_services/: test_progress_service.py  test_project_service.py  test_report_service.py
(+79 files in other folders)
