[project]
name = "smart-weekly-report"
version = "0.1.0"
description = "AI agent for automated weekly project report generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ---- Web framework ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",      # file upload
    "websockets>=13.0",

    # ---- Database ----
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",

    # ---- Redis ----
    "redis[hiredis]>=5.0.0",

    # ---- Milvus ----
    "pymilvus>=2.4.0",

    # ---- LLM / Agent ----
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",

    # ---- Data processing ----
    "pymupdf>=1.24.0",              # PDF parsing
    "pdfplumber>=0.11.0",           # PDF table extraction
    "paddleocr>=2.8.0; platform_machine=='x86_64'",
    "pillow>=10.0.0",

    # ---- Document export ----
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # ---- Task queue ----
    "celery[redis]>=5.4.0",

    # ---- Auth ----
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",

    # ---- Utils ----
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                 # TestClient
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
