# pyproject.toml 的“分区”不是随便分的，而是有规范的（PEP）

[project]                    # 核心分区1：项目本身信息 + 依赖
name = "smart-weekly-report" # 键值对
version = "0.1.0"
description = "AI agent for automated weekly project report generation"
readme = "README.md"
requires-python = ">=3.11"
# 项目运行所必须的依赖
dependencies = [
    # ---- Web framework ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",      # file upload
    "websockets>=13.0",

    # ---- Database ----
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",

    # ---- Redis ----
    "redis[hiredis]>=5.0.0",

    # ---- Milvus ----
    "pymilvus>=2.4.0",

    # ---- LLM / Agent ----
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",

    # ---- Data processing ----
    "pymupdf>=1.24.0",              # PDF parsing
    "pdfplumber>=0.11.0",           # PDF table extraction
    "paddleocr>=2.8.0; platform_machine=='x86_64'",
    "pillow>=10.0.0",

    # ---- Document export ----
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # ---- Task queue ----
    "celery[redis]>=5.4.0",

    # ---- Auth ----
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",

    # ---- Utils ----
    "pydantic>=2.9.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

# 开发时才需要的依赖（给开发者用）
[project.optional-dependencies] # 标准分区：分组依赖（dev / test / docs）
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                 # TestClient
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]              # 核心分区2：构建工具：发布包（pip install .）、构建wheel时用
requires = ["hatchling"]    # 打包工具，pip会自动安装hatchling打包项目
build-backend = "hatchling.build"

[tool.ruff]                 # 核心分区3：各种工具配置（工具怎么用）
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
